phase2_Dev/src/objects/Historical_Intake_Notes_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Duplicate_Rule_1__c</fullName>
        <formula>Intake_ID__c + &apos;|&apos; + Program_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Rule 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorText__c</fullName>
        <label>ErrorText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intake_ID__c</fullName>
        <label>Intake ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_CreatedBy__c</fullName>
        <label>Notes CreatedBy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Date__c</fullName>
        <label>Notes Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Id__c</fullName>
        <label>Notes Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notes Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>7000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <label>Program Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Historical Intake Notes Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Intake_ID__c</columns>
        <columns>Notes_Date__c</columns>
        <columns>Program_Id__c</columns>
        <columns>Notes_Processed__c</columns>
        <columns>Duplicate_Rule_1__c</columns>
        <columns>ErrorText__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{000000}</displayFormat>
        <label>Historical Intake Notes Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Intake Notes Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>